<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141933"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonts"
                android:text="@string/info_person"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="48dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:fontFamily="@font/fonts"
            android:textSize="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aboutBack"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btn_click_next"
            android:padding="10dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <!--        android:background="@drawable/effekt"-->


    </LinearLayout>


</LinearLayout>