<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:background="#EDF3F6"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="7.5"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSavollar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_click"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/questions"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_info"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_click"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_quit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_click"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/alegreya_sc"
            android:paddingVertical="10dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />

    </LinearLayout>


</LinearLayout>